Adicionado Listagem de Cursos

--- a/instituicao/cursos/index.html
+++ b/instituicao/cursos/index.html
@@ -2,15 +2,18 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet" />
     <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../componentes/header/styles_header.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="../componentes/header/styles_header.css" />
+    <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
 
     <title>Cursos</title>
@@ -18,15 +21,14 @@
 <div class="bg"></div>
 
 <body>
-
     <header>
         <div class="primeira_parte">
-            <img src="../componentes/header/img/grupo_pessoas.svg" alt="grupo_pessoas">
+            <img src="../componentes/header/img/grupo_pessoas.svg" alt="grupo_pessoas" />
             <h1 id="nomeInstituicao">NOME DA INSTITUIÇÃO</h1>
         </div>
 
         <a href="../index.html">
-            <img src="../componentes/header/img/perfil_instituicao.svg" alt="perfil">
+            <img src="../componentes/header/img/perfil_instituicao.svg" alt="perfil" />
         </a>
     </header>
 
@@ -34,150 +36,32 @@
         <div class="container">
             <div class="col-md-6 for-cnp cursos_existentes" id="icon">
                 <label for="cursos_ex" class="form-label">CURSOS EXISTENTES</label>
-                <input type="text" class="form-control cursos_ex" id="inputBuscarCurso" placeholder="Insira o nome do curso que procura...">
-                <i class="fa fa-search" style="font-size:24px"></i>
+                <input type="text" class="form-control cursos_ex" id="inputBuscarCurso"
+                    placeholder="Insira o nome do curso que procura..." />
+                <i class="fa fa-search" style="font-size: 24px"></i>
             </div>
 
-            <ul class="list-group" id="ul">
-                <li id="li" class="list-group-item li">
-                    <div id="icone">
-                        <p class="curso">Curso:</p>
-                        <img id="book" src="./img/books.svg" alt="book">
-                        <p class="nome" id="textNomeCurso">NOME</p>
-                    </div>
-                    <div class="button">
-                        <button id="terceiro_botao">TURMAS EXISTENTES NO CURSO</button>
-                        <button onclick="showModalEditar()" class="terceiro" id="primeiro_botao">EDITAR</button>
-                        <button onclick="showModalExcluir()" id="quarto_botao">EXCLUIR</button>
-                    </div>
-                </li>
-
-                <img src="./img/Line.svg" alt="">
-
-                <li id="li" class="list-group-item li">
-                    <div id="icone">
-                        <p class="curso">Curso:</p>
-                        <img id="book" src="./img/books.svg" alt="book">
-                        <p class="nome">NOME</p>
-                    </div>
-                    <div class="button">
-                        <button id="terceiro_botao" id="btnTurmasCurso">TURMAS EXISTENTES NO CURSO</button>
-                        <button onclick="showModalEditar()" class="terceiro" id="primeiro_botao">EDITAR</button>
-                        <button onclick="showModalExcluir()" id="quarto_botao">EXCLUIR</button>
-                    </div>
-                </li>
-
-                <img src="./img/Line.svg" alt="">
-
-                <li id="li" class="list-group-item li">
-                    <div id="icone">
-                        <p class="turma">Curso:</p>
-                        <img id="book" src="./img/books.svg" alt="book">
-                        <p class="nome">NOME</p>
-                    </div>
-                    <div class="button">
-                        <button id="terceiro_botao">TURMAS EXISTENTES NO CURSO</button>
-                        <button onclick="showModalEditar()" class="terceiro" id="primeiro_botao">EDITAR</button>
-                        <button onclick="showModalExcluir()" id="quarto_botao">EXCLUIR</button>
-                    </div>
-                </li>
-
-                <img src="./img/Line.svg" alt="">
-
-                <li id="li" class="list-group-item li">
-                    <div id="icone">
-                        <p class="turma">Curso:</p>
-                        <img id="book" src="./img/books.svg" alt="book">
-                        <p class="nome">NOME</p>
-                    </div>
-                    <div class="button">
-                        <button id="terceiro_botao">TURMAS EXISTENTES NO CURSO</button>
-                        <button onclick="showModalEditar()" class="terceiro" id="primeiro_botao">EDITAR</button>
-                        <button onclick="showModalExcluir()" id="quarto_botao">EXCLUIR</button>
-                    </div>
-                </li>
-
-                <img src="./img/Line.svg" alt="">
-
-                <li id="li" class="list-group-item li">
-                    <div id="icone">
-                        <p class="turma">Curso:</p>
-                        <img id="book" src="./img/books.svg" alt="book">
-                        <p class="nome">NOME</p>
-                    </div>
-                    <div class="button">
-                        <button id="terceiro_botao">TURMAS EXISTENTES NO CURSO</button>
-                        <button onclick="showModalEditar()" class="terceiro" id="primeiro_botao">EDITAR</button>
-                        <button onclick="showModalExcluir()" id="quarto_botao">EXCLUIR</button>
-                    </div>
-                </li>
-
-                <img src="./img/Line.svg" alt="">
-
-                <li id="li" class="list-group-item li">
-                    <div id="icone">
-                        <p class="turma">Curso:</p>
-                        <img id="book" src="./img/books.svg" alt="book">
-                        <p class="nome">NOME</p>
-                    </div>
-                    <div class="button">
-                        <button id="terceiro_botao">TURMAS EXISTENTES NO CURSO</button>
-                        <button onclick="showModalEditar()" class="terceiro" id="primeiro_botao">EDITAR</button>
-                        <button onclick="showModalExcluir()" id="quarto_botao">EXCLUIR</button>
-                    </div>
-                </li>
-
-                <img src="./img/Line.svg" alt="">
-
-                <li id="li" class="list-group-item li">
-                    <div id="icone">
-                        <p class="turma">Curso:</p>
-                        <img id="book" src="./img/books.svg" alt="book">
-                        <p class="nome">NOME</p>
-                    </div>
-                    <div class="button">
-                        <button id="terceiro_botao">TURMAS EXISTENTES NO CURSO</button>
-                        <button onclick="showModalEditar()" class="terceiro" id="primeiro_botao">EDITAR</button>
-                        <button onclick="showModalExcluir()" id="quarto_botao">EXCLUIR</button>
-                    </div>
-                </li>
-
-                <img src="./img/Line.svg" alt="">
-
-                <li id="li" class="list-group-item li">
-                    <div id="icone">
-                        <p class="turma">Curso:</p>
-                        <img id="book" src="./img/books.svg" alt="book">
-                        <p class="nome">NOME</p>
-                    </div>
-                    <div class="button">
-                        <button id="terceiro_botao">TURMAS EXISTENTES NO CURSO</button>
-                        <button onclick="showModalEditar()" class="terceiro" id="primeiro_botao">EDITAR</button>
-                        <button onclick="showModalExcluir()" id="quarto_botao">EXCLUIR</button>
-                    </div>
-                </li>
-            </ul>
-
-
+            <ul class="list-group" id="ul_container"></ul>
         </div>
 
-        <button onclick="showModalCurso()" class="addCurso button5"> <i class="fa fa-plus" style="font-size:36px"></i></button>
-
+        <button onclick="showModalCurso()" class="addCurso button5">
+            <i class="fa fa-plus" style="font-size: 36px"></i>
+        </button>
     </div>
 
     <div class="ccontainer modal modal-curso">
         <h1>CRIAR NOVO CURSO</h1>
         <form class="row g-7">
-
             <div class="lab-inp">
                 <label for="senha-label" class="form-label">Insira o nome desejado para o curso:</label>
-                <input type="text" class="form-control senha-label" id="inputCriarCurso" maxlength="255" required>
+                <input type="text" class="form-control senha-label" id="inputCriarCurso" maxlength="255" required />
             </div>
-
 
             <div class="buttons">
                 <div class="col-md-6">
-                    <button id="segundo_botao" onclick="exitModalCurso()" type="button">CANCELAR</button>
+                    <button id="segundo_botao" onclick="exitModalCurso()" type="button">
+                        CANCELAR
+                    </button>
                 </div>
                 <div class="col-md-6">
                     <button id="terceiro_botao" type="submit">CRIAR</button>
@@ -189,16 +73,18 @@
     <div class="ccontainer modal modal-editar">
         <h1>EDITAR CURSO</h1>
         <form class="row g-7 icon">
-
             <div class="lab-inp">
                 <label for="senha-label" class="form-label">Insira o novo nome desejado para o curso:</label>
-                <input id="inputEditarNomeCurso" type="text" class="form-control senha-label" maxlength="255" required>
+                <input id="inputEditarNomeCurso" type="text" class="form-control senha-label" maxlength="255"
+                    required />
                 <i class="fa fa-edit" style="font-size: 24px"></i>
             </div>
 
             <div class="buttons">
                 <div class="col-md-6">
-                    <button id="segundo_botao" onclick="exitModalEditar()" type="button">CANCELAR</button>
+                    <button id="segundo_botao" onclick="exitModalEditar()" type="button">
+                        CANCELAR
+                    </button>
                 </div>
                 <div class="col-md-6">
                     <button id="terceiro_botao" type="submit">SALVAR</button>
@@ -213,13 +99,16 @@
 
         <div class="buttons">
             <div class="col-md-12">
-                <button id="segundo_botao" onclick="exitModalExcluir()" type="button">CANCELAR</button>
+                <button id="segundo_botao" onclick="exitModalExcluir()" type="button">
+                    CANCELAR
+                </button>
             </div>
             <div class="col-md-12">
-                <button id="quarto_botao" onclick="exitModalExcluir()" type="submit">CONFIRMAR</button>
+                <button id="quarto_botao" onclick="exitModalExcluir()" type="submit">
+                    CONFIRMAR
+                </button>
             </div>
         </div>
-
     </div>
 </body>
 
