--- a/instituicao/turmas/vizualizacao/index.html
+++ b/instituicao/turmas/vizualizacao/index.html
@@ -4,9 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../componentes/header/styles_header.css">
@@ -148,17 +151,16 @@
                     </div>
                 </li>
             </ul>
-
-
         </div>
-
-        <button onclick="showModal()" class="addTurma button5"> <i class="fa fa-plus" style="font-size:36px"></i></button>
-
+        <div class="buttonAddTurma">
+            <button onclick="showModal()" class="addTurma button5"> <i class="fa fa-plus"
+                    style="font-size:36px"></i></button>
+        </div>
     </div>
 
     <div class="container mt-5 container modal">
         <h1>CADASTRO DE TURMA</h1>
-        <form class="row g-7">
+        <form class="row g-7" id="modal">
 
             <div class="col-md-12 lab-inp">
                 <label for="turma" class="form-label">Turma</label>
@@ -186,12 +188,18 @@
             </div>
 
             <div class="buttons">
-                <div class="col-md-3">
-                    <button class="segundo_botao" type="button" onclick="exitModalTurma()">SAIR</button>
+
+
+                <div class="col-md-4">
+                    <button class="terceiro_botao" onclick="" type="button">ADICIONAR MEMBROS</button>
                 </div>
 
-                <div class="col-md-3">
-                    <button class="terceiro_botao" onclick="showModalMembros()" type="button">AD</button>
+                <div class="col-md-4">
+                    <button class="primeiro_botao" onclick="resetForm()" type="button">CRIAR TURMA SEM MEMBROS</button>
+                </div>
+
+                <div class="col-md-4">
+                    <button class="segundo_botao" type="button" onclick="exitModal()">CANCELAR</button>
                 </div>
             </div>
         </form>
@@ -209,7 +217,8 @@
 
             <div class="col-md-6 lab-inp">
                 <label for="numero-estudantes" class="form-label">Número de estudantes</label>
-                <input type="email" class="form-control numero-estudantes" placeholder="Universidade De Curitiba " disabled>
+                <input type="email" class="form-control numero-estudantes" placeholder="Universidade De Curitiba "
+                    disabled>
             </div>
 
             <div class="col-md-6 lab-inp">
@@ -239,88 +248,92 @@
         </form>
     </div>
 
-
     <div class="container mt-5 container modal  modal-membros">
         <h1>PARTICIPANTES DA TURMA</h1>
 
-        <div class="-membro">
-            <ul class="list-group" id="ul-turma">
-                <li id="li" class="list-group-item li">
-                    <div id="icone">
-                        <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
-                        <p class="nome">NOME</p>
-                    </div>
-                    <div class="button">
-                        <h2>PROFESSOR</h2>
-                    </div>
-                </li>
-
-                <img src="./img/Line.svg" alt="">
-
-                <li id="li" class="list-group-item li">
-                    <div id="icone">
-                        <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
-                        <p class="nome">NOME</p>
-                    </div>
-                    <div class="button">
-                        <h2>PROFESSOR</h2>
-                    </div>
-                </li>
-
-                <img src="./img/Line.svg" alt="">
-
-                <li id="li" class="list-group-item li">
-                    <div id="icone">
-                        <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
-                        <p class="nome">NOME</p>
-                    </div>
-                    <div class="button">
-                        <h2>PROFESSOR</h2>
-                    </div>
-                </li>
-
-                <img src="./img/Line.svg" alt="">
-
-                <li id="li" class="list-group-item li">
-                    <div id="icone">
-                        <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
-                        <p class="nome">NOME</p>
-                    </div>
-                    <div class="button">
-                        <h2>PROFESSOR</h2>
-                    </div>
-                </li>
-
-                <img src="./img/Line.svg" alt="">
-
-                <li id="li" class="list-group-item li">
-                    <div id="icone">
-                        <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
-                        <p class="nome">NOME</p>
-                    </div>
-                    <div class="button">
-                        <h2>PROFESSOR</h2>
-                    </div>
-                </li>
-            </ul>
-            <div class="buttons">
-                <div class="col-md-6">
-                    <button class="segundo_botao" type="button" onclick="showModalTurma()">VOLTAR</button>
+        <ul class="list-group" id="ul-turma">
+            <li id="li" class="list-group-item li">
+                <div id="icone">
+                    <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
+                        data-width="100" data-height="100"></span>
+                    <p class="nome">NOME</p>
                 </div>
+                <div class="button">
+                    <h2>PROFESSOR</h2>
+                </div>
+            </li>
+
+            <img src="./img/Line.svg" alt="">
+
+            <li id="li" class="list-group-item li">
+                <div id="icone">
+                    <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
+                        data-width="100" data-height="100"></span>
+                    <p class="nome">NOME</p>
+                </div>
+                <div class="button">
+                    <h2>PROFESSOR</h2>
+                </div>
+            </li>
+
+            <img src="./img/Line.svg" alt="">
+
+            <li id="li" class="list-group-item li">
+                <div id="icone">
+                    <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
+                        data-width="100" data-height="100"></span>
+                    <p class="nome">NOME</p>
+                </div>
+                <div class="button">
+                    <h2>PROFESSOR</h2>
+                </div>
+            </li>
+
+            <img src="./img/Line.svg" alt="">
+
+            <li id="li" class="list-group-item li">
+                <div id="icone">
+                    <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
+                        data-width="100" data-height="100"></span>
+                    <p class="nome">NOME</p>
+                </div>
+                <div class="button">
+                    <h2>PROFESSOR</h2>
+                </div>
+            </li>
+
+            <img src="./img/Line.svg" alt="">
+
+            <li id="li" class="list-group-item li">
+                <div id="icone">
+                    <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
+                        data-width="100" data-height="100"></span>
+                    <p class="nome">NOME</p>
+                </div>
+                <div class="button">
+                    <h2>PROFESSOR</h2>
+                </div>
+            </li>
+        </ul>
+        <div class="buttons-modal">
+            <div class="col-md-3">
+                <button class="segundo_botao" type="button" onclick="showModalTurma()">VOLTAR</button>
             </div>
         </div>
     </div>
+
 
     <div class="ccontainer modal modal-excluir">
         <h1>DESEJA EXCLUIR ESSA TURMA?</h1>
         <h2>Lembre-se que essa é uma ação irreversível!</h2>
 
-        <div class="buttons">
-            <div class="col-md-12">
-                <button id="segundo_botao" onclick="exitModalExcluir()" type="button">CANCELAR</butt<div class="col-md-12">
+        <div class="col-md-12 buttons">
+            <div class="col-md-6">
+                <button class="segundo_botao" onclick="exitModalExcluir()" type="button">CANCELAR</button>
+            </div>
+            <div class="col-md-6">
                 <button class="quarto_botao" onclick="exitModalExcluir()" type="button">CONFIRMAR</button>
             </div>
         </div>
-
     </div>
 </body>
