--- a/instituicao/usuarios/cadastro/index.html
+++ b/instituicao/usuarios/cadastro/index.html
@@ -4,9 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
@@ -42,7 +45,8 @@
             <li id="li" class="list-group-item li">
                 <div id="icone">
                     <p class="turma">Turma:</p>
-                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100" data-height="100"></span>
+                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100"
+                        data-height="100"></span>
                     <p class="nome">NOME</p>
                 </div>
                 <div class="button">
@@ -56,7 +60,8 @@
             <li id="li" class="list-group-item li">
                 <div id="icone">
                     <p class="turma">Turma:</p>
-                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100" data-height="100"></span>
+                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100"
+                        data-height="100"></span>
                     <p class="nome">NOME</p>
                 </div>
                 <div class="button">
@@ -70,7 +75,8 @@
             <li id="li" class="list-group-item li">
                 <div id="icone">
                     <p class="turma">Turma:</p>
-                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100" data-height="100"></span>
+                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100"
+                        data-height="100"></span>
                     <p class="nome">NOME</p>
                 </div>
                 <div class="button">
@@ -84,7 +90,8 @@
             <li id="li" class="list-group-item li">
                 <div id="icone">
                     <p class="turma">Turma:</p>
-                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100" data-height="100"></span>
+                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100"
+                        data-height="100"></span>
                     <p class="nome">NOME</p>
                 </div>
                 <div class="button">
@@ -98,7 +105,8 @@
             <li id="li" class="list-group-item li">
                 <div id="icone">
                     <p class="turma">Turma:</p>
-                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100" data-height="100"></span>
+                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100"
+                        data-height="100"></span>
                     <p class="nome">NOME</p>
                 </div>
                 <div class="button">
@@ -112,7 +120,8 @@
             <li id="li" class="list-group-item li">
                 <div id="icone">
                     <p class="turma">Turma:</p>
-                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100" data-height="100"></span>
+                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100"
+                        data-height="100"></span>
                     <p class="nome">NOME</p>
                 </div>
                 <div class="button">
@@ -126,7 +135,8 @@
             <li id="li" class="list-group-item li">
                 <div id="icone">
                     <p class="turma">Turma:</p>
-                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100" data-height="100"></span>
+                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100"
+                        data-height="100"></span>
                     <p class="nome">NOME</p>
                 </div>
                 <div class="button">
@@ -140,7 +150,8 @@
             <li id="li" class="list-group-item li">
                 <div id="icone">
                     <p class="turma">Turma:</p>
-                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100" data-height="100"></span>
+                    <span class="iconify livro" data-icon="bx:book-reader" style="color: #05204a;" data-width="100"
+                        data-height="100"></span>
                     <p class="nome">NOME</p>
                 </div>
                 <div class="button">
@@ -209,7 +220,8 @@
 
             <div class="col-md-6 lab-inp">
                 <label for="numero-estudantes" class="form-label">Número de estudantes</label>
-                <input type="email" class="form-control numero-estudantes" placeholder="Universidade De Curitiba " disabled>
+                <input type="email" class="form-control numero-estudantes" placeholder="Universidade De Curitiba "
+                    disabled>
             </div>
 
             <div class="col-md-6 lab-inp">
@@ -244,72 +256,76 @@
     <div class="container mt-5 container modal  modal-membros">
         <h1>PARTICIPANTES DA TURMA</h1>
 
-        <div class="-membro">
-            <ul class="list-group" id="ul-turma">
-                <li id="li" class="list-group-item li">
-                    <div id="icone">
-                        <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
-                        <p class="nome">NOME</p>
-                    </div>
-                    <div class="button">
-                        <h2>PROFESSOR</h2>
-                    </div>
-                </li>
-
-                <img src="./img/Line.svg" alt="">
-
-                <li id="li" class="list-group-item li">
-                    <div id="icone">
-                        <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
-                        <p class="nome">NOME</p>
-                    </div>
-                    <div class="button">
-                        <h2>PROFESSOR</h2>
-                    </div>
-                </li>
-
-                <img src="./img/Line.svg" alt="">
-
-                <li id="li" class="list-group-item li">
-                    <div id="icone">
-                        <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
-                        <p class="nome">NOME</p>
-                    </div>
-                    <div class="button">
-                        <h2>PROFESSOR</h2>
-                    </div>
-                </li>
-
-                <img src="./img/Line.svg" alt="">
-
-                <li id="li" class="list-group-item li">
-                    <div id="icone">
-                        <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
-                        <p class="nome">NOME</p>
-                    </div>
-                    <div class="button">
-                        <h2>PROFESSOR</h2>
-                    </div>
-                </li>
-
-                <img src="./img/Line.svg" alt="">
-
-                <li id="li" class="list-group-item li">
-                    <div id="icone">
-                        <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
-                        <p class="nome">NOME</p>
-                    </div>
-                    <div class="button">
-                        <h2>PROFESSOR</h2>
-                    </div>
-                </li>
-            </ul>
-            <div class="buttons">
-                <div class="col-md-6">
-                    <button class="primeiro_botao" type="button" onclick="showModalTurma()">VOLTAR</button>
+        <ul class="list-group" id="ul-turma">
+            <li id="li" class="list-group-item li">
+                <div id="icone">
+                    <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
+                        data-width="100" data-height="100"></span>
+                    <p class="nome">NOME</p>
                 </div>
+                <div class="button">
+                    <h2>PROFESSOR</h2>
+                </div>
+            </li>
+
+            <img src="./img/Line.svg" alt="">
+
+            <li id="li" class="list-group-item li">
+                <div id="icone">
+                    <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
+                        data-width="100" data-height="100"></span>
+                    <p class="nome">NOME</p>
+                </div>
+                <div class="button">
+                    <h2>PROFESSOR</h2>
+                </div>
+            </li>
+
+            <img src="./img/Line.svg" alt="">
+
+            <li id="li" class="list-group-item li">
+                <div id="icone">
+                    <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
+                        data-width="100" data-height="100"></span>
+                    <p class="nome">NOME</p>
+                </div>
+                <div class="button">
+                    <h2>PROFESSOR</h2>
+                </div>
+            </li>
+
+            <img src="./img/Line.svg" alt="">
+
+            <li id="li" class="list-group-item li">
+                <div id="icone">
+                    <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
+                        data-width="100" data-height="100"></span>
+                    <p class="nome">NOME</p>
+                </div>
+                <div class="button">
+                    <h2>PROFESSOR</h2>
+                </div>
+            </li>
+
+            <img src="./img/Line.svg" alt="">
+
+            <li id="li" class="list-group-item li">
+                <div id="icone">
+                    <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
+                        data-width="100" data-height="100"></span>
+                    <p class="nome">NOME</p>
+                </div>
+                <div class="button">
+                    <h2>PROFESSOR</h2>
+                </div>
+            </li>
+        </ul>
+        <div class="buttons-modal">
+            <div class="col-md-3">
+                <button class="primeiro_botao" type="button" onclick="showModalTurma()">VOLTAR</button>
             </div>
         </div>
+    </div>
 
 
 
