listagem de grupos de tcc finalizada

--- a/instituicao/turmas/vizualizacao/index.html
+++ b/instituicao/turmas/vizualizacao/index.html
@@ -34,14 +34,14 @@
 
             <ul class="list-group" id="ul">
                 <li id="li" class="list-group-item li">
-                    <div id="icone">
+                    <div id="turma">
                         <p class="curso">Curso:</p>
                         <img id="book" src="./img/icone_turma.svg" alt="book">
                         <p class="nome">NOME</p>
                     </div>
                     <div class="button">
                         <button onclick="showModalTurma()" class="terceiro_botao">SOBRE A TURMA</button>
-                        <button class="primeiro_botao">GRUPOS DE TCC</button>
+                        <button onclick="showModalGrupos()" class="primeiro_botao">GRUPOS DE TCC</button>
                         <button onclick="showModalExcluir()" class="quarto_botao">EXCLUIR</button>
                     </div>
                 </li>
@@ -49,14 +49,14 @@
                 <img src="./img/Line.svg" alt="">
 
                 <li id="li" class="list-group-item li">
-                    <div id="icone">
+                    <div id="turma">
                         <p class="curso">Curso:</p>
                         <img id="book" src="./img/icone_turma.svg" alt="book">
                         <p class="nome">NOME</p>
                     </div>
                     <div class="button">
                         <button onclick="showModalTurma()" class="terceiro_botao">SOBRE A TURMA</button>
-                        <button class="primeiro_botao">GRUPOS DE TCC</button>
+                        <button onclick="showModalGrupos()" class="primeiro_botao">GRUPOS DE TCC</button>
                         <button onclick="showModalExcluir()" class="quarto_botao">EXCLUIR</button>
                     </div>
                 </li>
@@ -64,14 +64,14 @@
                 <img src="./img/Line.svg" alt="">
 
                 <li id="li" class="list-group-item li">
-                    <div id="icone">
+                    <div id="turma">
                         <p class="turma">Turma:</p>
                         <img id="book" src="./img/icone_turma.svg" alt="book">
                         <p class="nome">NOME</p>
                     </div>
                     <div class="button">
                         <button onclick="showModalTurma()" class="terceiro_botao">SOBRE A TURMA</button>
-                        <button class="primeiro_botao">GRUPOS DE TCC</button>
+                        <button onclick="showModalGrupos()" class="primeiro_botao">GRUPOS DE TCC</button>
                         <button onclick="showModalExcluir()" class="quarto_botao">EXCLUIR</button>
                     </div>
                 </li>
@@ -79,14 +79,14 @@
                 <img src="./img/Line.svg" alt="">
 
                 <li id="li" class="list-group-item li">
-                    <div id="icone">
+                    <div id="turma">
                         <p class="turma">Turma:</p>
                         <img id="book" src="./img/icone_turma.svg" alt="book">
                         <p class="nome">NOME</p>
                     </div>
                     <div class="button">
                         <button onclick="showModalTurma()" class="terceiro_botao">SOBRE A TURMA</button>
-                        <button class="primeiro_botao">GRUPOS DE TCC</button>
+                        <button onclick="showModalGrupos()" class="primeiro_botao">GRUPOS DE TCC</button>
                         <button onclick="showModalExcluir()" class="quarto_botao">EXCLUIR</button>
                     </div>
                 </li>
@@ -94,14 +94,14 @@
                 <img src="./img/Line.svg" alt="">
 
                 <li id="li" class="list-group-item li">
-                    <div id="icone">
+                    <div id="turma">
                         <p class="turma">Turma:</p>
                         <img id="book" src="./img/icone_turma.svg" alt="book">
                         <p class="nome">NOME</p>
                     </div>
                     <div class="button">
                         <button onclick="showModalTurma()" class="terceiro_botao">SOBRE A TURMA</button>
-                        <button class="primeiro_botao">GRUPOS DE TCC</button>
+                        <button onclick="showModalGrupos()" class="primeiro_botao">GRUPOS DE TCC</button>
                         <button onclick="showModalExcluir()" class="quarto_botao">EXCLUIR</button>
                     </div>
                 </li>
@@ -109,14 +109,14 @@
                 <img src="./img/Line.svg" alt="">
 
                 <li id="li" class="list-group-item li">
-                    <div id="icone">
+                    <div id="turma">
                         <p class="turma">Turma:</p>
                         <img id="book" src="./img/icone_turma.svg" alt="book">
                         <p class="nome">NOME</p>
                     </div>
                     <div class="button">
                         <button onclick="showModalTurma()" class="terceiro_botao">SOBRE A TURMA</button>
-                        <button class="primeiro_botao">GRUPOS DE TCC</button>
+                        <button onclick="showModalGrupos()" class="primeiro_botao">GRUPOS DE TCC</button>
                         <button onclick="showModalExcluir()" class="quarto_botao">EXCLUIR</button>
                     </div>
                 </li>
@@ -124,14 +124,14 @@
                 <img src="./img/Line.svg" alt="">
 
                 <li id="li" class="list-group-item li">
-                    <div id="icone">
+                    <div id="turma">
                         <p class="turma">Turma:</p>
                         <img id="book" src="./img/icone_turma.svg" alt="book">
                         <p class="nome">NOME</p>
                     </div>
                     <div class="button">
                         <button onclick="showModalTurma()" class="terceiro_botao">SOBRE A TURMA</button>
-                        <button class="primeiro_botao">GRUPOS DE TCC</button>
+                        <button onclick="showModalGrupos()" class="primeiro_botao">GRUPOS DE TCC</button>
                         <button onclick="showModalExcluir()" class="quarto_botao">EXCLUIR</button>
                     </div>
                 </li>
@@ -139,14 +139,14 @@
                 <img src="./img/Line.svg" alt="">
 
                 <li id="li" class="list-group-item li">
-                    <div id="icone">
+                    <div id="turma">
                         <p class="turma">Turma:</p>
                         <img id="book" src="./img/icone_turma.svg" alt="book">
                         <p class="nome">NOME</p>
                     </div>
                     <div class="button">
                         <button onclick="showModalTurma()" class="terceiro_botao">SOBRE A TURMA</button>
-                        <button class="primeiro_botao">GRUPOS DE TCC</button>
+                        <button onclick="showModalGrupos()" class="primeiro_botao">GRUPOS DE TCC</button>
                         <button onclick="showModalExcluir()" class="quarto_botao">EXCLUIR</button>
                     </div>
                 </li>
@@ -253,65 +253,65 @@
 
         <ul class="list-group" id="ul-turma">
             <li id="li" class="list-group-item li">
-                <div id="icone">
+                <div id="membro">
                     <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
                         data-width="100" data-height="100"></span>
                     <p class="nome">NOME</p>
                 </div>
                 <div class="button">
-                    <h2>PROFESSOR</h2>
+                    <h2>TIPO</h2>
                 </div>
             </li>
 
             <img src="./img/Line.svg" alt="">
 
             <li id="li" class="list-group-item li">
-                <div id="icone">
+                <div id="membro">
                     <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
                         data-width="100" data-height="100"></span>
                     <p class="nome">NOME</p>
                 </div>
                 <div class="button">
-                    <h2>PROFESSOR</h2>
+                    <h2>TIPO</h2>
                 </div>
             </li>
 
             <img src="./img/Line.svg" alt="">
 
             <li id="li" class="list-group-item li">
-                <div id="icone">
+                <div id="membro">
                     <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
                         data-width="100" data-height="100"></span>
                     <p class="nome">NOME</p>
                 </div>
                 <div class="button">
-                    <h2>PROFESSOR</h2>
+                    <h2>TIPO</h2>
                 </div>
             </li>
 
             <img src="./img/Line.svg" alt="">
 
             <li id="li" class="list-group-item li">
-                <div id="icone">
+                <div id="membro">
                     <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
                         data-width="100" data-height="100"></span>
                     <p class="nome">NOME</p>
                 </div>
                 <div class="button">
-                    <h2>PROFESSOR</h2>
+                    <h2>TIPO</h2>
                 </div>
             </li>
 
             <img src="./img/Line.svg" alt="">
 
             <li id="li" class="list-group-item li">
-                <div id="icone">
+                <div id="membro">
                     <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
                         data-width="100" data-height="100"></span>
                     <p class="nome">NOME</p>
                 </div>
                 <div class="button">
-                    <h2>PROFESSOR</h2>
+                    <h2>TIPO</h2>
                 </div>
             </li>
         </ul>
@@ -322,6 +322,111 @@
         </div>
     </div>
 
+    <div class="container mt-5 container modal modal-grupos">
+
+        <h1>GRUPOS DE TCC DA TURMA</h1>
+
+
+        <ul class="list-group" id="ul-grupo">
+            <li id="li" class="list-group-item li">
+                <div id="grupo">
+                    <p class="prof_orientador">Professor Orientador:</p>
+                    <span class="iconify" data-icon="healthicons:group-discussion-meetingx3" style="color: #05244d;"
+                        data-width="130" data-height="130"></span>
+                    <p class="numero">Número do grupo</p>
+                    <p class="tema"> TEMA</p>
+                </div>
+                <div id="grupo">
+                    <p class="prof_orientador">Professor Orientador:</p>
+                    <span class="iconify" data-icon="healthicons:group-discussion-meetingx3" style="color: #05244d;"
+                        data-width="130" data-height="130"></span>
+                    <p class="numero">Número do grupo</p>
+                    <p class="tema"> TEMA</p>
+                </div>
+                <div id="grupo">
+                    <p class="prof_orientador">Professor Orientador:</p>
+                    <span class="iconify" data-icon="healthicons:group-discussion-meetingx3" style="color: #05244d;"
+                        data-width="130" data-height="130"></span>
+                    <p class="numero">Número do grupo</p>
+                    <p class="tema"> TEMA</p>
+                </div>
+                <div id="grupo">
+                    <p class="prof_orientador">Professor Orientador:</p>
+                    <span class="iconify" data-icon="healthicons:group-discussion-meetingx3" style="color: #05244d;"
+                        data-width="130" data-height="130"></span>
+                    <p class="numero">Número do grupo</p>
+                    <p class="tema"> TEMA</p>
+                </div>
+            </li>
+
+            <img src="./img/Line.svg" alt="">
+
+            <li id="li" class="list-group-item li">
+                <div id="grupo">
+                    <p class="prof_orientador">Professor Orientador:</p>
+                    <span class="iconify" data-icon="healthicons:group-discussion-meetingx3" style="color: #05244d;"
+                        data-width="130" data-height="130"></span>
+                    <p class="numero">Número do grupo</p>
+                    <p class="tema"> TEMA</p>
+                </div>
+                <div id="grupo">
+                    <p class="prof_orientador">Professor Orientador:</p>
+                    <span class="iconify" data-icon="healthicons:group-discussion-meetingx3" style="color: #05244d;"
+                        data-width="130" data-height="130"></span>
+                    <p class="numero">Número do grupo</p>
+                    <p class="tema"> TEMA</p>
+                </div>
+                <div id="grupo">
+                    <p class="prof_orientador">Professor Orientador:</p>
+                    <span class="iconify" data-icon="healthicons:group-discussion-meetingx3" style="color: #05244d;"
+                        data-width="130" data-height="130"></span>
+                    <p class="numero">Número do grupo</p>
+                    <p class="tema"> TEMA</p>
+                </div>
+                <div id="grupo">
+                    <p class="prof_orientador">Professor Orientador:</p>
+                    <span class="iconify" data-icon="healthicons:group-discussion-meetingx3" style="color: #05244d;"
+                        data-width="130" data-height="130"></span>
+                    <p class="numero">Número do grupo</p>
+                    <p class="tema"> TEMA</p>
+                </div>
+            </li>
+
+            <img src="./img/Line.svg" alt="">
+            <li id="li" class="list-group-item li">
+                <div id="grupo">
+                    <p class="prof_orientador">Professor Orientador:</p>
+                    <span class="iconify" data-icon="healthicons:group-discussion-meetingx3" style="color: #05244d;"
+                        data-width="130" data-height="130"></span>
+                    <p class="numero">Número do grupo</p>
+                    <p class="tema"> TEMA</p>
+                </div>
+                <div id="grupo">
+                    <p class="prof_orientador">Professor Orientador:</p>
+                    <span class="iconify" data-icon="healthicons:group-discussion-meetingx3" style="color: #05244d;"
+                        data-width="130" data-height="130"></span>
+                    <p class="numero">Número do grupo</p>
+                    <p class="tema"> TEMA</p>
+                </div>
+                <div id="grupo">
+                    <p class="prof_orientador">Professor Orientador:</p>
+                    <span class="iconify" data-icon="healthicons:group-discussion-meetingx3" style="color: #05244d;"
+                        data-width="130" data-height="130"></span>
+                    <p class="numero">Número do grupo</p>
+                    <p class="tema"> TEMA</p>
+                </div>
+                <div id="grupo">
+                    <p class="prof_orientador">Professor Orientador:</p>
+                    <span class="iconify" data-icon="healthicons:group-discussion-meetingx3" style="color: #05244d;"
+                        data-width="130" data-height="130"></span>
+                    <p class="numero">Número do grupo</p>
+                    <p class="tema"> TEMA</p>
+                </div>
+            </li>
+
+        </ul>
+
+    </div>
 
     <div class="ccontainer modal modal-excluir">
         <h1>DESEJA EXCLUIR ESSA TURMA?</h1>
