--- a/instituicao/usuarios/visualizacao/index.html
+++ b/instituicao/usuarios/visualizacao/index.html
@@ -49,7 +49,7 @@
             <div class="space">
                 <ul class="list-group" id="ul">
                     <li id="li" class="list-group-item li" onclick="showModal()">
-                        <div id="icone">
+                        <div id="usuario">
                             <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
                                 data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
@@ -62,7 +62,7 @@
                     <img src="./img/Line.svg" alt="">
 
                     <li id="li" class="list-group-item li" onclick="showModal()">
-                        <div id="icone">
+                        <div id="usuario">
                             <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
                                 data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
@@ -75,7 +75,7 @@
                     <img src="./img/Line.svg" alt="">
 
                     <li id="li" class="list-group-item li" onclick="showModal()">
-                        <div id="icone">
+                        <div id="usuario">
                             <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
                                 data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
@@ -88,7 +88,7 @@
                     <img src="./img/Line.svg" alt="">
 
                     <li id="li" class="list-group-item li" onclick="showModal()">
-                        <div id="icone">
+                        <div id="usuario">
                             <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
                                 data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
@@ -101,7 +101,7 @@
                     <img src="./img/Line.svg" alt="">
 
                     <li id="li" class="list-group-item li" onclick="showModal()">
-                        <div id="icone">
+                        <div id="usuario">
                             <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
                                 data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
@@ -114,7 +114,7 @@
                     <img src="./img/Line.svg" alt="">
 
                     <li id="li" class="list-group-item li" onclick="showModal()">
-                        <div id="icone">
+                        <div id="usuario">
                             <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
                                 data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
@@ -127,7 +127,7 @@
                     <img src="./img/Line.svg" alt="">
 
                     <li id="li" class="list-group-item li" onclick="showModal()">
-                        <div id="icone">
+                        <div id="usuario">
                             <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
                                 data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
@@ -140,7 +140,7 @@
                     <img src="./img/Line.svg" alt="">
 
                     <li id="li" class="list-group-item li" onclick="showModal()">
-                        <div id="icone">
+                        <div id="usuario">
                             <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
                                 data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
@@ -153,7 +153,7 @@
                     <img src="./img/Line.svg" alt="">
 
                     <li id="li" class="list-group-item li" onclick="showModal()">
-                        <div id="icone">
+                        <div id="usuario">
                             <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
                                 data-width="100" data-height="100"></span>
                             <p class="nome">NOME</p>
@@ -240,11 +240,11 @@
 
                 <div class="col-md-6 lab-inp">
                     <label for="tipo-select" class="form-label">Tipo</label>
-                    <select class="form-select tipo-select" aria-label="Default select example">
-                        <option selected>Open this select menu</option>
-                        <option value="1">One</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option>
+                    <select class="form-select tipo-select" id="tipo-select" aria-label="Default select example">
+                        <option selected>SELECIONE O TIPO DE USUÁRIO</option>
+                        <option value="1">Professor</option>
+                        <option value="2">Aluno</option>
+                        <option value="3">Avaliador</option>
                     </select>
                 </div>
 
